--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 
-    padding: 0 20px;
+    margin: 60px 0;
     text-align: center;
 }
 
@@ -41,10 +41,20 @@ span {
 }
 
 h1 {
-    font-size: 54px;
+    font-size: 96px;
 }
 
 h2 {
-    font-size: 34px;
+    font-size: 48px;
 
+}
+
+h3 {
+    font-size: 24px;
+}
+
+h1,
+h2,
+h3 {
+    margin: 0;
 }
