--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,14 @@
+:root {
+    --primary-color: #6b63ff;
+    --secondary-color: #f5f2fe;
+    --box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.3);
+}
+
 body {
 
-    margin: 60px 0;
+    margin: 60px auto;
     text-align: center;
-}
 
-:root {
-    --acent-color: #6b63ff;
-}
-
-button {
-    padding: 20px;
-    border: 1px solid var(--acent-color);
-    border-radius: 5px;
-    margin: 0 20px;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-.main-button {
-    background-color: var(--acent-color);
-    color: white;
-
-
-    box-shadow: 10px 5px 10px rgb(183, 182, 182);
-}
-
-.second-button {
-    background-color: white;
-    color: var(--acent-color);
 }
 
 span {
@@ -51,10 +30,70 @@ h2 {
 
 h3 {
     font-size: 24px;
+    opacity: 0.7;
+    margin-bottom: 0;
 }
 
 h1,
 h2,
 h3 {
     margin: 0;
+}
+
+button {
+    padding: 20px;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    margin: 40px 20px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+p {
+    background-color: var(--secondary-color);
+    width: 25%;
+    padding: 20px;
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 1.5;
+
+}
+
+.main-button {
+    background-color: var(--primary-color);
+    color: white;
+
+
+    box-shadow: var(--box-shadow);
+}
+
+.second-button {
+    background-color: white;
+    color: var(--primary-color);
+}
+
+.homepage-link {
+    color: var(--primary-color);
+}
+
+.about-paragraphs {
+    display: flex;
+    margin: 30px 0;
+}
+
+.about-paragraphs p {
+    margin: 10px;
+
+}
+
+.email-link {
+    color: var(--primary-color);
+    font-size: 28px;
+    text-decoration: none;
+}
+
+.email-link:hover {
+    text-decoration: underline;
 }
